# umem

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  claude-desktop.bak.json  docker-compose.yml  todo.txt
.github/workflows/: codeql.yml  rust.yml
crates/umem_controller/: Cargo.toml
crates/umem_controller/src/: lib.rs
crates/umem_db/: Cargo.toml
crates/umem_db/src/: lib.rs  qdrant.rs  sql_lite.rs
crates/umem_doc_parser/: Cargo.toml
crates/umem_doc_parser/src/: lib.rs
crates/umem_embeddings/: Cargo.toml
crates/umem_embeddings/src/: cf_baai_bge_m3.rs  lib.rs
crates/umem_grpc_server/: Cargo.toml  build.rs  memory.rs
crates/umem_grpc_server/proto/: memory.proto
crates/umem_grpc_server/src/: lib.rs  memory.rs  memory_service_grpc_impl.rs  qdrant.rs
crates/umem_mcp/: Cargo.toml
crates/umem_mcp/src/: auth_example.rs  lib.rs  service.rs  token.rs
crates/umem_mcp/src/html/: mcp_oauth_index.html
crates/umem_mcp/templates/: mcp_oauth_authorize.html  mcp_oauth_index.html
crates/umem_proto_generated/: Cargo.toml  build.rs
crates/umem_proto_generated/src/: lib.rs  memory.rs
crates/umem_search/: Cargo.toml
crates/umem_search/src/: lib.rs  project_dirs.rs  trace.rs  trace_index.rs
crates/umem_summarizer/: Cargo.toml  lib.rs
crates/umem_user/: Cargo.toml
crates/umem_user/src/: grpc_access_layer.rs
crates/umem_utils/: Cargo.toml
crates/umem_utils/src/: lib.rs
crates/umem_vector/: Cargo.toml
crates/umem_vector/src/: lib.rs  qdrant.rs
crates/umem_web_scrapper/: Cargo.toml
crates/umem_web_scrapper/src/: lib.rs
src/: main.rs  tracing.rs
src/entities/: document.rs
