[package]
name = "umem"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
umem_search = {path = "crates/umem_search"}
umem_doc_parser = {path = "crates/umem_doc_parser"}
umem_embeddings = {path = "crates/umem_embeddings"}
umem_vector = {path = "crates/umem_vector"}
umem_grpc_server = {path = "crates/umem_grpc_server"}
umem_web_scrapper = {path = "crates/umem_web_scrapper"}
umem_summarizer = {path = "crates/umem_summarizer"}
umem_proto_generated = {path = "crates/umem_proto_generated"}
umem_controller = {path = "crates/umem_controller"}
umem_mcp = {path = "crates/umem_mcp"}
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["macros","rt-multi-thread","rt"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rmcp = { version = "0.2.0", features = ["server", "macros" , "transport-io"] }

[dependencies]
umem_search = { workspace = true }
umem_grpc_server = { workspace = true }
umem_summarizer = { workspace = true }
umem_controller = { workspace = true }
umem_proto_generated = { workspace = true }
umem_mcp = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
rmcp = { workspace = true }
dotenv = "0.15.0"
