[package]
name = "umem_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde_json = "1.0"
lazy_static = { workspace = true}
umem_db = { workspace = true}
umem_embeddings = { workspace = true}
umem_proto_generated = { workspace = true}
anyhow = { workspace = true}
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
