[package]
name = "umem_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
umem_proto_generated = { workspace = true }
umem_controller = { workspace = true }
serde = {workspace = true }
tonic = "0.12"
prost = "0.13"
tokio = { workspace = true, features = ["signal"] }
rmcp = {workspace = true, features=["auth"] }
chrono = {workspace = true}
tracing-subscriber = {version="0.3.19", features = ["env-filter", "fmt"]}
axum = {version="0.8.4", features=["macros"]}
rand = { version = "0.9", features = ["std"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = {workspace= true}
uuid={workspace=true, features=["v4"]}
tracing = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
serde_urlencoded = "0.7.1"
reqwest = { workspace = true}
base64 = { workspace = true}
jsonwebtoken = "9.3.1"

[dev-dependencies]
tokio-stream = { version = "0.1" }
