[package]
name = "umem_proto_generated"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
serde = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
umem_utils = { workspace = true }

[build-dependencies]
tonic-build = { version="0.12" }
rmcp = { workspace = true }
