[package]
name = "umem_vector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
qdrant-client = "1.14.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = "0.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = {workspace = true}
serde = {workspace = true}
chrono = "0.4.41"
